--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer localizado em Pernambuco">
   <title>Adryell - Desenvolvedor Front-end e UX & UI Designer</title>
   <link rel="stylesheet" href="/projetos/portfolio/css/styles.css">
+  <link rel="icon" href="./img/favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
