--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer localizado em Pernambuco">
   <title>Adryell - Desenvolvedor Front-end e UX & UI Designer</title>
-  <link rel="stylesheet" href="/projetos/portfolio/css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
   <link rel="icon" href="./img/favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
   <header class="header">
-    <img src="/projetos/portfolio/img/marca.svg" alt="Lobo">
+    <img src="./img/marca.svg" alt="Lobo">
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
@@ -23,7 +23,7 @@
   </header>
 
   <main class="introducao">
-    <img src="/projetos/portfolio/img/perfil.jpg" alt="Lobo Cinza" width="360" height="520">
+    <img src="./img/perfil.jpg" alt="Lobo Cinza" width="360" height="520">
     <div>
       <h1>Desenvolvedor<br>Front End &<br> UX/UI Designer</h1>
       <p>Localizado em Pernambuco</p>
